<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >Timezor
    </string>
    <string name="action_settings" >Settings
    </string>
    <string name="title_section1" >Timer
    </string>
    <string name="title_section2" >Saved
    </string>
    <string name="input_number_1">1
    </string>
    <string name="input_number_2">2
    </string>
    <string name="input_number_3">3
    </string>
    <string name="input_number_4">4
    </string>
    <string name="input_number_5">5
    </string>
    <string name="input_number_6">6
    </string>
    <string name="input_number_7">7
    </string>
    <string name="input_number_8">8
    </string>
    <string name="input_number_9">9
    </string>
    <string name="input_number_0">0
    </string>
    <string name="start_button_text">Start
    </string>
    <string name="stop_button_text">Stop
    </string>
    <string name="save_button_text">Save
    </string>
    <string name="preference_file_key">com.ermainz.timezor.PREFERENCE_FILE_KEY
    </string>
    <string name="saved_timers_key">SAVED_TIMERS_KEY
    </string>

</resources>
